--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -5,6 +5,7 @@
 }
 body{
     height: 100vh;
+    font-family:"Roboto", sans-serif;
 }
 main{
     width: 100%;
@@ -263,4 +264,63 @@ form {
 
 form:hover{
     transform: scale(1.05);
+}
+
+
+.nav{
+    width: 100vw;
+    height: 82px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px 0 0 10;
+    background-color: white;
+    color: black;
+    
+}
+.nav .div1 h1{
+
+        font-size: 2.4em;
+        color: black;
+        font-weight: 800;
+        color: #406689;
+
+}
+.nav .div1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 30px;
+
+}
+
+.nav .div2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 70%;
+    height: 100%;
+    
+    padding: 0;
+
+}
+.nav .div2 a{
+    color: black;
+    text-decoration: none;
+    font-size: 1.5em;
+    font-weight: 500;
+    
+}
+.nav .div2 a:hover{
+    color: #406689;
+    border-bottom: 2px solid #406689 ;
+
+}
+.nav .div2 .logout:hover{
+    border-bottom: 0px solid black;
+}
+.nav .div2 .logout{
+    font-size: 2.4em;
+    
 }
