--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -5,6 +5,7 @@
 }
 body{
     height: 100vh;
+    width: 100vw;
     font-family:"Roboto", sans-serif;
 }
 main{
@@ -324,3 +325,22 @@ form:hover{
     font-size: 2.4em;
     
 }
+/* article{
+    width: 100vw;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+article select{
+    padding: 5px 20px;
+    border: 2px solid #406689 ;
+}
+article select option:hover{
+    background-color: #406689;
+    color: white;
+    
+    
+}
+ */
