--- a/public/assets/css/players.css
+++ b/public/assets/css/players.css
@@ -152,3 +152,26 @@ article div{
  #games .select select{
     width: 150px;
  }
+ .setgameres{
+    background-color: #406689;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: 0.5s;
+ }
+ .setgameres:hover{
+    transform: scale(1.01);
+ }
+ .newround{
+   background-color: #406689;
+   color: white;
+   text-align: center;
+   padding: 5px 10px;
+   border-radius: 5px;
+   margin: 0px auto;
+   transition: 0.5s;
+ }
+ .newround:hover{
+   background-color: #283d50;
+   transform: scale(1.05);
+ }
