--- a/public/assets/css/players.css
+++ b/public/assets/css/players.css
@@ -174,4 +174,49 @@ article div{
  .newround:hover{
    background-color: #283d50;
    transform: scale(1.05);
+   
  }
+ #gamediv2{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
+ #gamediv2 h1{
+   color: white;
+   background-color: rgb(0, 203, 135);
+   padding: 5px 10px;
+   
+   
+ }
+ #blockedbutton{
+   background-color: #454545;
+   transition: 0s;
+   pointer-events: none;
+ }
+ #blockedbutton:hover{
+   transform: none;
+ }
+ #gamediv2 #draw{
+   color: black;
+   background-color: rgb(242, 242, 242);
+ }
+ .spanpo{
+   padding: 7px;
+   text-align: center;
+   background-color: #191919;
+   color: white;
+   margin-right: 10px;
+ }
+ .spanimg{
+   width: 30px;
+   height: 30px;
+ }
+ .spanimg img{
+   max-width: 100%;
+   max-height: 100%;
+ }
+ /* .spandiv .po{
+   background-color:#191919 ;
+   color:white;
+   padding: 3px;
+ } */
